Finish exercise primes

--- a/exercises/primes/primes.html
+++ b/exercises/primes/primes.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang='en' data-bs-theme='light'>
   <head>
     <title>Hello</title>
     <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <!-- CSS only -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
@@ -20,12 +21,15 @@
   </head>
 
   <body>
-    <div id="warnings"></div>
-    <h1 id="greeting"></h1>
-    <p id="numberInfo" class="alert alert-info"></p>
-    <table id="nPrimes" class="table table-striped">
-      <thead></thead>
-      <tbody></tbody>
-    </table>
+      <div class="p-5 mb-2 bg-body-tertiary rounded-3">
+        <div id="warnings"></div>
+        <h1 id="greeting" class="text-bg-dark"></h1>
+        <p id="numberInfo" class="alert alert-info fw-bold"></p>
+        <table id="nPrimes" class="table table-striped">
+          <thead></thead>
+          <tbody></tbody>
+        </table>
+    </div>
   </body>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
 </html>
