Finish project calculator

--- a/projects/calculator/calculator.html
+++ b/projects/calculator/calculator.html
@@ -10,25 +10,43 @@
   </head>
 
   <body>
-    <div class="container">
-      <span id="result">&nbsp;</span>
-      <button id="btn0" onclick="enterDigit(0)">0</button>
-      <button id="btn1" onclick="enterDigit(1)">1</button>
-      <button id="btn2" onclick="enterDigit(2)">2</button>
-      <button id="btn3" onclick="enterDigit(3)">3</button>
-      <button id="btn4" onclick="enterDigit(4)">4</button>
-      <button id="btn5" onclick="enterDigit(5)">5</button>
-      <button id="btn6" onclick="enterDigit(6)">6</button>
-      <button id="btn7" onclick="enterDigit(7)">7</button>
-      <button id="btn8" onclick="enterDigit(8)">8</button>
-      <button id="btn9" onclick="enterDigit(9)">9</button>
-      <button id="btnSum" onclick="enterOp('+')">+</button>
-      <button id="btnSub" onclick="enterOp('-')">-</button>
-      <button id="btnMul" onclick="enterOp('*')">*</button>
-      <button id="btnDiv" onclick="enterOp('/')">/</button>
-      <button id="btnEql" onclick="eval_expr()">=</button>
-      <button id="btnClr" onclick="clear_screen()">C</button>
-      <button id="btnDot" onclick="enterDigit('.')">.</button>
+    <div class="container-fluid">
+      <div class="row">
+        <span id="result">&nbsp;</span>
+      </div>
+      <div class="col-lg"
+        <div class="col">
+          <div class="row-md">
+            <button type="button" id="btn1" class="btn btn-info" onclick="enterDigit(1)">1</button>
+            <button type="button" id="btn2" class="btn btn-info" onclick="enterDigit(2)">2</button>
+            <button type="button" id="btn3" class="btn btn-info" onclick="enterDigit(3)">3</button>
+          </div>
+          <div class="row-md">
+            <button type="button" id="btn4" class="btn btn-info" onclick="enterDigit(4)">4</button>
+            <button type="button" id="btn5" class="btn btn-info" onclick="enterDigit(5)">5</button>
+            <button type="button" id="btn6" class="btn btn-info" onclick="enterDigit(6)">6</button>
+          </div>
+          <div class="row-md">
+            <button type="button" id="btn7" class="btn btn-info" onclick="enterDigit(7)">7</button>
+            <button type="button" id="btn8" class="btn btn-info" onclick="enterDigit(8)">8</button>
+            <button type="button" id="btn9" class="btn btn-info" onclick="enterDigit(9)">9</button>
+          </div>
+        </div>
+        <div class="col">
+          <div class="row-md">
+            <button type="button" id="btn0" class="btn btn-info" onclick="enterDigit(0)">0</button>
+            <button type="button" id="btnSum" class="btn btn-dark" onclick="enterOp('+')">+</button>
+            <button type="button" id="btnSub" class="btn btn-dark" onclick="enterOp('-')">-</button>
+            <button type="button" id="btnMul" class="btn btn-dark" onclick="enterOp('*')">*</button>
+            <button type="button" id="btnDiv" class="btn btn-dark" onclick="enterOp('/')">/</button>
+          </div>
+          <div class="row-md">
+            <button type="button" id="btnEql" class="btn btn-success" onclick="eval_expr()">=</button>
+            <button type="button" id="btnClr" class="btn btn-primary" onclick="clear_screen()">C</button>
+            <button type="button" id="btnDot" class="btn btn-info" onclick="enterDigit('.')">.</button>
+          </div>
+        </div>
+      </div>
     </div>
 
     <script src="js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
