--- a/exercises/todo_list/index.html
+++ b/exercises/todo_list/index.html
@@ -2,36 +2,38 @@
 
 <head>
     <title>TODO list</title>
-    <link rel="stylesheet" href="css/bootstrap.min.css" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 </head>
 
 <body> 
-    <div class="container">
+    <div class="container text-center">
         <h1>TODO List</h1>
         <div class="container">
             <form id="newTask">
-            <div>
-                <div>
+            <div class="row">
+                <div class="col">
                     <label for="title">Task</label>
                     <input id="title" required />
                 </div>
 
-                <div>
+                <div class="col">
                     <label for="assignedTo">Assigned to</label>
                     <select id="assignedTo"></select>
                 </div>
 
-                <div>
+                <div class="col">
                     <label for="priority">Priority</label>
                     <select id="priority"></select>
                 </div>
 
-                <div>
+                <div class="col">
                     <label for="dueDate">Due date</label>
                     <input id="dueDate" required />
                 </div>
             </div>
+            <div class="row" id="feedbackMessage"></div>
             <div>
                 <button type="button" id="addTaskBtn" onclick="addTask()">Add task</button>
             </div>
@@ -50,11 +52,11 @@
                     <th>Due date</th>
                 </tr>
             </thead>
-            <tbody></tbody>
+            <tbody id="tableBody"></tbody>
         </table>
     </div>
 
-    <script src="js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <script type="text/javascript" src="js/script.js"></script>
 </body>
 
