--- a/projects/list_of_stuff/index.html
+++ b/projects/list_of_stuff/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <title>List of stuff</title>
+    <title>List of Pinball Machines</title>
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
@@ -9,10 +9,56 @@
 </head>
 
 <body>
-    <!-- JavaScript Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
+    <div class="container">
+        <form id="pinball_details">
+        <div class="row">
+            <div class="col-sm-4 form-group">
+            <label for="sel_brand">Brand</label>
+            <select name="brand" class="form-control" id="sel_brand">
+                <!-- Will populate later -->
+            </select>
+            </div>
+            <div class="col-sm-4 form-group">
+            <label for="num_year">Year</label>
+            <input name="year" class="form-control" id="num_year" type="number" min="1931" max="2023">
+                <!-- Will populate later -->
+            </div>
+            <div class="col-sm-4 form-group">
+            <label for="num_price">Price</label>
+            <input name="price" class="form-control" id="num_price" type="number" step=".01">
+                <!-- Will populate later -->
+            </div>
+        </div>
+        </form>
+        <div class="row text-center">
+        <div class="col d-grid gap-2 d-md-block">
+            <button
+            type="button"
+            onclick="if (document.getElementById('pinball_details').checkValidity()) {addMachine()}"
+            class="btn btn-primary"
+            >
+            Add New Machine
+            </button>
+            <button type="button" onclick="loadMachines()" class="btn btn-success">
+            Load Machines
+            </button>
+            <button type="button" onclick="clearAll()" class="btn btn-danger">
+            Remove All
+            </button>
+        </div>
+        </div>
+    </div>
+    <div class="container">
+        <table class="table" id="tbl_machines">
+        <thead><th></th><th>Brand</th><th>Year</th><th>Price</th></thead>
+        <tbody></tbody>
+        </table>
+    </div>
+    <script
+        src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
-        crossorigin="anonymous"></script>
+        crossorigin="anonymous"
+    ></script>
     <script type="text/javascript" src="js/model.js"></script>
     <script type="text/javascript" src="js/view.js"></script>
     <script type="text/javascript" src="js/controller.js"></script>
