--- a/exercises/promises/index.html
+++ b/exercises/promises/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <div>
+    <div class="container-fluid border">
         <form id=form_number>
             <div>
                 <div>
@@ -17,7 +17,7 @@
                 </div>
                 <div>
                     <label for="getThem">Click a button</label>
-                    <input type=button id="getInfo" onclick="clickedon()" value="Get Info!" />
+                    <input type=button id="getInfo" class="btn btn-primary" onclick="clickedon()" value="Get Info!" />
                 </div>
                 <div>
                     <label for=batch>Check a box to get 3 numbers at once</label>
