--- a/projects/jokes_api/client/index.html
+++ b/projects/jokes_api/client/index.html
@@ -1,23 +1,50 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>API client</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@1/css/pico.min.css" />
-  </head>
-  <body>
-    <main class="container">
-      <input type="submit" value="Enlighten me" name="koan" onclick="getKoan()" />
-      <div id="content"></div>
-    </main>
-    <script>
-      async function getKoan() {
-        let data = await fetch("https://yasiro01.pythonanywhere.com/api/v1/koan")
-          .then((response) => response.json())
-          .catch((error) => console.error(error));
-        document.querySelector("#content").innerHTML = data["koan"];
-      }
-    </script>
-  </body>
+<html>
+
+<head>
+    <title>Jokes for Fun</title>
+    <link rel="stylesheet" href="static/css/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+</head>
+
+<body>
+    <div>
+        <div><a href="/">Home</a></div>
+        <div>
+            <h2 class="text-center">Pick the category, language, and number of jokes to hear</h2>
+        </div>
+            <div class="container-fluid text-center pborder">
+                <div>
+                    <label for="category" value="Category">Category</label>
+                    <select name="category" id="selCat">
+                        <option value="all">All</option>
+                        <option value="neutral">Neutral</option>
+                        <option value="chuck">Chuck Norris</option>
+                    </select>
+                </div>
+                <div>
+                    <label for="language" value="Language">Language</label>
+                    <select name="language" id="selLang">
+                        <option value="en">EN</option>
+                        <option value="es">ES</option>
+                        <option value="de">DE</option>
+                    </select>
+                </div>
+                <div>
+                    <label for="number" value="Number">Number</label>
+                    <input name="number" id="selNum" type="number">
+                </div>
+            </div>
+            <div class="container-fluid text-center small-padding">
+                <div>
+                    <button class="btn-joke" type="submit" id="btnAmuse" value="Tell me a joke" onclick="getData()">Amuse me</button>
+                </div>
+            </div>
+        <div id="jokes" class="container-fluid text-center">
+            <!-- JOKES WILL APPEAR HERE -->
+        </div>
+    </div>
+    <script src="script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+</body>
+
 </html>
